# Infra

./: .commitlintrc.js  .env.example  .gitignore  .lintstagedrc.js  .prettierignore  README.md  ZROKY-V1-Scope.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/docs/: introduction.mdx  mint.json  package.json  quickstart.mdx
apps/web/: .eslintrc.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json
infra/docker/: .dockerignore  Dockerfile.api  Dockerfile.engine  Dockerfile.web
infra/k8s/: README.md  api-deployment.yaml
infra/terraform/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: seed.sh  setup.sh
services/api/: .eslintrc.js  Dockerfile  package.json  tsconfig.json
services/engine-consistency/: Makefile  pyproject.toml
services/engine-consistency/src/engine_consistency/: __init__.py  config.py  engine.py  main.py  models.py  storage.py  worker.py
services/engine-consistency/src/engine_consistency/analyzers/: __init__.py  benchmark.py  drift.py  fingerprint.py  regression.py  version_tracker.py
services/engine-consistency/src/engine_consistency/routes/: analyze.py  health.py
services/engine-consistency/tests/: test_analyzers.py  test_engine.py  test_health.py
services/engine-grounding/: Makefile  pyproject.toml
services/engine-safety/: Makefile  pyproject.toml
services/engine-system/: Makefile  pyproject.toml
services/health-check/: Makefile  pyproject.toml
services/health-check/src/health_check/: __init__.py  config.py  main.py
services/health-check/src/health_check/routes/: health.py
services/health-check/tests/: test_health.py
services/trust-computer/: Makefile  pyproject.toml
services/trust-computer/src/trust_computer/: __init__.py  config.py  coverage.py  engine.py  main.py  models.py  storage.py
services/trust-computer/src/trust_computer/routes/: compute.py  health.py
services/trust-computer/tests/: test_engine.py  test_health.py
(+154 files in other folders)
